create passages, events characters templates
